minor changes inspired by FindBugs